# pdf2cbz

./: .gitignore  AGENTS.md  CMakeLists.txt  DISTRIBUTION.md  README.md
.github/workflows/: release.yml
src/: converter.cpp  converter.hpp  main.cpp  utils.hpp  version.hpp.in
tests/: converter_test.cpp  utils_test.cpp
